[metadata]
name = xfstests-results-analyzer
version = 1.0
description = Analyze and visualize the results in xfstests
author = LeavaTail
author_email = starbow.duster@gmail.com
url = https://github.com/LeavaTail/xfstests-results-analyzer

[options]
packages = find:
install_requires =
    pandas
    openpyxl

[options.entry_points]
console_scripts = xfstests-analyzer = analyzer.__main__:main
