[metadata]
name = xfstests-results-viewer
version = 0.1
description = Visualize the results in xfstests
author = LeavaTail
author_email = starbow.duster@gmail.com
url = https://github.com/LeavaTail/xfstests-results-viewer

[options]
packages = find:
install_requires =
    pandas
    openpyxl

[options.entry_points]
console_scripts = xfstests-results-viewer = xfstests_results_viewer.__main__:main
